sonar critical issues fixes,  some perf things too